Commit lời chào

--- a/Music Store/Views/Shared/_Layout.cshtml
+++ b/Music Store/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
         </nav>
     </header>
     <div class="container">
+        <p>Hello Mọi Người</p>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
