--- a/Music Store/Views/Songs/AddSingerForSong.cshtml
+++ b/Music Store/Views/Songs/AddSingerForSong.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<h1><label>Singer of @Model.Song.SongName</label></h1>
+<h1><label>Singer huỳnh lần 3 of @Model.Song.SongName</label></h1>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
