--- a/Music Store/Views/Shared/_Layout.cshtml
+++ b/Music Store/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        <p>Hạnh Gà</p>
     </div>
 
     <footer class="border-top footer text-muted">
