--- a/Music Store/Views/Shared/_Layout.cshtml
+++ b/Music Store/Views/Shared/_Layout.cshtml
@@ -35,11 +35,12 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        <p>ABC</p>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Music_Store - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2100 - Sờ to re - Mu síc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
